added integron finder

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /output/abricate/
 /output/platon/
 /output/viralVerify/
+/output/integron/
 /database/abricate/
 /database/platon/
 /database/viralVerify/
